--- a/application/index/view/index/add.html
+++ b/application/index/view/index/add.html
@@ -101,7 +101,7 @@
                             </div>
                         </div>
                         <div class="form-group row">
-                            <label for="lname" class="col-sm-3 text-right control-label col-form-label">导入：</label>
+                            <label for="lname" class="col-sm-3 text-right control-label col-form-label">导入(.txt或者.xlsx)：</label>
                             <div class="col-sm-9">
                                 <form class='tianjia'>
                                     <input type="file" name="txt" id="txt">
